Добавляет начало адаптивной верстки декоративных элементов

--- a/source/index.html
+++ b/source/index.html
@@ -13,9 +13,9 @@
     <a class="page-header__logo">
       <img src="img/logotype-mobile.svg" width="102" height="84" alt="Город Седона">
     </a>
-    <nav class="main-nav">
+    <nav class="main-nav main-nav--closed main-nav--nojs">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <ul class="main-nav__list site-list">
+      <ul class="main-nav__list site-list">
         <li class="site-list__item site-list__item--active">
           <a>
             Главная
@@ -36,7 +36,7 @@
             HTML Academy
           </a>
         </li>
-        </ul>
+      </ul>
     </nav>
   </header>
   <main class="page-main">
